--- a/doc/manpages/Makefile.am
+++ b/doc/manpages/Makefile.am
@@ -184,6 +184,7 @@ APIMANS += gnutls_cipher_get_name.3
 APIMANS += gnutls_cipher_get_tag_size.3
 APIMANS += gnutls_cipher_init.3
 APIMANS += gnutls_cipher_list.3
+APIMANS += gnutls_cipher_self_test.3
 APIMANS += gnutls_cipher_set_iv.3
 APIMANS += gnutls_cipher_set_priority.3
 APIMANS += gnutls_cipher_suite_get_name.3
@@ -224,6 +225,7 @@ APIMANS += gnutls_dh_set_prime_bits.3
 APIMANS += gnutls_digest_get_id.3
 APIMANS += gnutls_digest_get_name.3
 APIMANS += gnutls_digest_list.3
+APIMANS += gnutls_digest_self_test.3
 APIMANS += gnutls_dtls_cookie_send.3
 APIMANS += gnutls_dtls_cookie_verify.3
 APIMANS += gnutls_dtls_get_data_mtu.3
@@ -241,6 +243,7 @@ APIMANS += gnutls_error_is_fatal.3
 APIMANS += gnutls_error_to_alert.3
 APIMANS += gnutls_est_record_overhead_size.3
 APIMANS += gnutls_fingerprint.3
+APIMANS += gnutls_fips140_mode_enabled.3
 APIMANS += gnutls_global_deinit.3
 APIMANS += gnutls_global_init.3
 APIMANS += gnutls_global_set_audit_log_function.3
@@ -295,6 +298,7 @@ APIMANS += gnutls_mac_get_key_size.3
 APIMANS += gnutls_mac_get_name.3
 APIMANS += gnutls_mac_get_nonce_size.3
 APIMANS += gnutls_mac_list.3
+APIMANS += gnutls_mac_self_test.3
 APIMANS += gnutls_mac_set_priority.3
 APIMANS += gnutls_ocsp_req_add_cert.3
 APIMANS += gnutls_ocsp_req_add_cert_id.3
@@ -496,6 +500,7 @@ APIMANS += gnutls_pkcs7_set_crt_raw.3
 APIMANS += gnutls_pk_get_id.3
 APIMANS += gnutls_pk_get_name.3
 APIMANS += gnutls_pk_list.3
+APIMANS += gnutls_pk_self_test.3
 APIMANS += gnutls_pk_to_sign.3
 APIMANS += gnutls_prf.3
 APIMANS += gnutls_prf_raw.3
@@ -514,6 +519,7 @@ APIMANS += gnutls_priority_set_direct.3
 APIMANS += gnutls_priority_sign_list.3
 APIMANS += gnutls_privkey_decrypt_data.3
 APIMANS += gnutls_privkey_deinit.3
+APIMANS += gnutls_privkey_generate.3
 APIMANS += gnutls_privkey_get_pk_algorithm.3
 APIMANS += gnutls_privkey_get_type.3
 APIMANS += gnutls_privkey_import_ext.3
@@ -593,6 +599,7 @@ APIMANS += gnutls_pubkey_verify_hash2.3
 APIMANS += gnutls_random_art.3
 APIMANS += gnutls_range_split.3
 APIMANS += gnutls_record_can_use_length_hiding.3
+APIMANS += gnutls_record_check_corked.3
 APIMANS += gnutls_record_check_pending.3
 APIMANS += gnutls_record_cork.3
 APIMANS += gnutls_record_disable_padding.3
