--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -783,6 +783,8 @@ FUNCS += functions/gnutls_cipher_init
 FUNCS += functions/gnutls_cipher_init.short
 FUNCS += functions/gnutls_cipher_list
 FUNCS += functions/gnutls_cipher_list.short
+FUNCS += functions/gnutls_cipher_self_test
+FUNCS += functions/gnutls_cipher_self_test.short
 FUNCS += functions/gnutls_cipher_set_iv
 FUNCS += functions/gnutls_cipher_set_iv.short
 FUNCS += functions/gnutls_cipher_set_priority
@@ -863,6 +865,8 @@ FUNCS += functions/gnutls_digest_get_name
 FUNCS += functions/gnutls_digest_get_name.short
 FUNCS += functions/gnutls_digest_list
 FUNCS += functions/gnutls_digest_list.short
+FUNCS += functions/gnutls_digest_self_test
+FUNCS += functions/gnutls_digest_self_test.short
 FUNCS += functions/gnutls_dtls_cookie_send
 FUNCS += functions/gnutls_dtls_cookie_send.short
 FUNCS += functions/gnutls_dtls_cookie_verify
@@ -897,6 +901,8 @@ FUNCS += functions/gnutls_est_record_overhead_size
 FUNCS += functions/gnutls_est_record_overhead_size.short
 FUNCS += functions/gnutls_fingerprint
 FUNCS += functions/gnutls_fingerprint.short
+FUNCS += functions/gnutls_fips140_mode_enabled
+FUNCS += functions/gnutls_fips140_mode_enabled.short
 FUNCS += functions/gnutls_global_deinit
 FUNCS += functions/gnutls_global_deinit.short
 FUNCS += functions/gnutls_global_init
@@ -1005,6 +1011,8 @@ FUNCS += functions/gnutls_mac_get_nonce_size
 FUNCS += functions/gnutls_mac_get_nonce_size.short
 FUNCS += functions/gnutls_mac_list
 FUNCS += functions/gnutls_mac_list.short
+FUNCS += functions/gnutls_mac_self_test
+FUNCS += functions/gnutls_mac_self_test.short
 FUNCS += functions/gnutls_mac_set_priority
 FUNCS += functions/gnutls_mac_set_priority.short
 FUNCS += functions/gnutls_ocsp_req_add_cert
@@ -1407,6 +1415,8 @@ FUNCS += functions/gnutls_pk_get_name
 FUNCS += functions/gnutls_pk_get_name.short
 FUNCS += functions/gnutls_pk_list
 FUNCS += functions/gnutls_pk_list.short
+FUNCS += functions/gnutls_pk_self_test
+FUNCS += functions/gnutls_pk_self_test.short
 FUNCS += functions/gnutls_pk_to_sign
 FUNCS += functions/gnutls_pk_to_sign.short
 FUNCS += functions/gnutls_prf
@@ -1443,6 +1453,8 @@ FUNCS += functions/gnutls_privkey_decrypt_data
 FUNCS += functions/gnutls_privkey_decrypt_data.short
 FUNCS += functions/gnutls_privkey_deinit
 FUNCS += functions/gnutls_privkey_deinit.short
+FUNCS += functions/gnutls_privkey_generate
+FUNCS += functions/gnutls_privkey_generate.short
 FUNCS += functions/gnutls_privkey_get_pk_algorithm
 FUNCS += functions/gnutls_privkey_get_pk_algorithm.short
 FUNCS += functions/gnutls_privkey_get_type
@@ -1601,6 +1613,8 @@ FUNCS += functions/gnutls_range_split
 FUNCS += functions/gnutls_range_split.short
 FUNCS += functions/gnutls_record_can_use_length_hiding
 FUNCS += functions/gnutls_record_can_use_length_hiding.short
+FUNCS += functions/gnutls_record_check_corked
+FUNCS += functions/gnutls_record_check_corked.short
 FUNCS += functions/gnutls_record_check_pending
 FUNCS += functions/gnutls_record_check_pending.short
 FUNCS += functions/gnutls_record_cork
