--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1601,6 +1601,8 @@ FUNCS += functions/gnutls_range_split
 FUNCS += functions/gnutls_range_split.short
 FUNCS += functions/gnutls_record_can_use_length_hiding
 FUNCS += functions/gnutls_record_can_use_length_hiding.short
+FUNCS += functions/gnutls_record_check_corked
+FUNCS += functions/gnutls_record_check_corked.short
 FUNCS += functions/gnutls_record_check_pending
 FUNCS += functions/gnutls_record_check_pending.short
 FUNCS += functions/gnutls_record_cork
