--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -77,8 +77,7 @@ COBJECTS = gnutls_range.c gnutls_record.c \
 	gnutls_auth.c gnutls_v2_compat.c gnutls_datum.c			\
 	gnutls_session_pack.c gnutls_mpi.c gnutls_pk.c gnutls_cert.c	\
 	gnutls_global.c gnutls_constate.c gnutls_anon_cred.c		\
-	$(srcdir)/pkix_asn1_tab.c				\
-	$(srcdir)/gnutls_asn1_tab.c				\
+	pkix_asn1_tab.c gnutls_asn1_tab.c				\
 	gnutls_mem.c gnutls_ui.c vasprintf.c vasprintf.h		\
 	gnutls_sig.c gnutls_ecc.c gnutls_alert.c	\
 	system.c gnutls_str.c gnutls_state.c gnutls_x509.c		\
