corrected running tests over valgrind
It seems that some autotools change has prevented that for
some time.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -118,6 +118,5 @@ TESTS_ENVIRONMENT =						\
 	srcdir="$(srcdir)"
 
 if WANT_TEST_SUITE
-TESTS_ENVIRONMENT +=						\
-	$(VALGRIND)
+LOG_COMPILER = $(VALGRIND)
 endif
