--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -125,6 +125,5 @@ TESTS_ENVIRONMENT =						\
 	srcdir="$(srcdir)"
 
 if WANT_TEST_SUITE
-TESTS_ENVIRONMENT +=						\
-	$(VALGRIND)
+LOG_COMPILER = $(VALGRIND)
 endif
