--- a/configure.ac
+++ b/configure.ac
@@ -188,6 +188,10 @@ if test "$ac_have_unicode" != "yes";then
   fi
 fi
 
+dnl Note that g*l_INIT are run after we check for library capabilities,
+dnl to prevent issues from caching lib dependencies. See discussion
+dnl in https://bugs.gentoo.org/show_bug.cgi?id=494940 and
+dnl http://gnu-autoconf.7623.n7.nabble.com/Correct-way-to-check-for-clock-gettime-td12276.html
 gl_INIT
 ggl_INIT
 
