Add LIB_CLOCK_GETTIME to crywrap
It's used indirectly thus causing build breakage on versions of glibc
where it's defined in librt rather than libc directly.

Signed-off-by: Gustavo Zacarias <gustavo@zacarias.com.ar>

--- a/src/crywrap/Makefile.am
+++ b/src/crywrap/Makefile.am
@@ -29,3 +29,4 @@ bin_PROGRAMS = crywrap
 
 crywrap_SOURCES = crywrap.c primes.h crywrap.h
 crywrap_LDADD = ../../lib/libgnutls.la $(LIBIDN_LIBS) #../../gl/libgnu.la 
+crywrap_LDADD += $(LIB_CLOCK_GETTIME)
