Added identifiers for DSA-SHA382 and DSA-SHA512

--- a/lib/includes/gnutls/gnutls.h.in
+++ b/lib/includes/gnutls/gnutls.h.in
@@ -664,6 +664,8 @@ typedef enum {
 	GNUTLS_SIGN_ECDSA_SHA256 = 14,
 	GNUTLS_SIGN_ECDSA_SHA384 = 15,
 	GNUTLS_SIGN_ECDSA_SHA512 = 16,
+	GNUTLS_SIGN_DSA_SHA384 = 17,
+	GNUTLS_SIGN_DSA_SHA512 = 18,
 } gnutls_sign_algorithm_t;
 
 /**
