--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -823,6 +823,8 @@ FUNCS += functions/gnutls_db_check_entry
 FUNCS += functions/gnutls_db_check_entry.short
 FUNCS += functions/gnutls_db_check_entry_time
 FUNCS += functions/gnutls_db_check_entry_time.short
+FUNCS += functions/gnutls_db_get_default_cache_expiration
+FUNCS += functions/gnutls_db_get_default_cache_expiration.short
 FUNCS += functions/gnutls_db_get_ptr
 FUNCS += functions/gnutls_db_get_ptr.short
 FUNCS += functions/gnutls_db_remove_session
