--- a/lib/ext/Makefile.am
+++ b/lib/ext/Makefile.am
@@ -39,8 +39,8 @@ libgnutls_ext_la_SOURCES = max_record.c cert_type.c \
 	max_record.h cert_type.h server_name.h srp.h \
 	session_ticket.h signature.h safe_renegotiation.h \
 	session_ticket.c srp.c ecc.c ecc.h heartbeat.c heartbeat.h \
-	status_request.h status_request.c new_record_padding.c \
-	new_record_padding.h dumbfw.c dumbfw.h
+	status_request.h status_request.c \
+	dumbfw.c dumbfw.h
 
 if ENABLE_ALPN
 libgnutls_ext_la_SOURCES += alpn.c alpn.h
