examples include both gnulibs

--- a/doc/examples/Makefile.am
+++ b/doc/examples/Makefile.am
@@ -23,6 +23,8 @@ AM_CFLAGS = $(WARN_CFLAGS) $(WERROR_CFLAGS)
 AM_CPPFLAGS = \
 	-I$(top_srcdir)/lib/includes -I$(top_builddir)/lib/includes	\
 	-I$(top_srcdir)/extra/includes \
+	-I$(top_srcdir)/src/gl \
+	-I$(top_builddir)/src/gl \
 	-I$(top_srcdir)/gl \
 	-I$(top_builddir)/gl
 
