session tickets can be disabled

--- a/configure.ac
+++ b/configure.ac
@@ -781,6 +781,7 @@ if features are disabled)
   DTLS-SRTP support:    $ac_enable_srtp
   ALPN support:         $ac_enable_alpn
   OCSP support:         $ac_enable_ocsp
+  Ses. ticket support:  $ac_enable_session_tickets
   OpenPGP support:      $ac_enable_openpgp
   SRP support:          $ac_enable_srp
   PSK support:          $ac_enable_psk
